# quick-input

./: .gitignore  MANUAL_TEST_CHECKLIST.md  README.md  TODO.md  main.py  pyproject.toml  shortcuts.json
quick_input/: __init__.py  __main__.py  app.py  config.py  hotkeys.py  typer.py
quick_input/backends/: __init__.py  base.py  macos_dev.py  pynput_hotkeys.py  pynput_typing.py  pywinauto_typing.py  select.py  windows_hotkeys.py  windows_typing.py
scripts/: build_exe.py
tests/: test_app.py  test_backends.py  test_config.py
