[project]
name = "quick-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.7.7; platform_system == 'Darwin'",
]

[project.scripts]
quick-input = "quick_input.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
