[project]
name = "quick-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pynput>=1.7.7; platform_system == 'Darwin' or platform_system == 'Windows'",
]

[project.scripts]
quick-input = "quick_input.app:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
